Fri Nov  2 03:23:37 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/mkmf.rb: fix for if config["libdir"] is nil.

Thu Nov  1 23:06:01 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/make-snapshot: fix wrong regexp for releasing preview.
	  patched by mame.

Thu Nov  1 22:27:11 2012  Koichi Sasada <ko1@atdot.net>

	* NEWS: add a news about objspace,
	  ObjectSpace.reachable_objects_from.

Thu Nov  1 21:57:00 2012  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_new),
	  test/bigdecimal/test_bigdecimal.rb:
	  Fix exception message of BigDecimal constructor with a Float.

Thu Nov  1 21:52:20 2012  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_add),
	  test/bigdecimal/test_bigdecimal.rb:
	  need to specify precision for converting Rational and Float.
	  [ruby-core:48045] [Bug #7176]

Thu Nov  1 21:42:20 2012  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_process.rb: Revert r37404.  My ubuntu box has
	  actually the directory named "/nonexistent"...  Sorry.

Thu Nov  1 21:28:28 2012  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_process.rb: Process.exec raised EACCES on Linux
	  3.5.0-17-generic.  This is a temporal fix to rescue that exception.
	  Needs kosaki's review.

Thu Nov  1 21:19:56 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (set_relation): parent_iseq need to be set regardless iseq
	  type.  fix r37397.

Thu Nov  1 19:47:23 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (RUBY_STACK_MIN): may not a compile time constant.
	  fix r37079.  [ruby-dev:46322] [Bug #7247]

Thu Nov  1 16:44:36 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* NEWS: add note for Module#refine, Module#refinements,
	  Module#using, and Kernel#using.

Thu Nov  1 14:41:47 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (rb_using_module): using should be used indirectly.
	  [ruby-dev:46326] [Feature #7251]

Wed Oct 31 18:17:38 2012  Narihiro Nakamura  <authornari@gmail.com>
